fixed homepage mobile overflow issue

--- a/static/css/style-homepage-slider.css
+++ b/static/css/style-homepage-slider.css
@@ -1,4 +1,6 @@
-
+.body{
+    overflow-x: hidden;
+}
 #carouselExampleIndicators{
     /* border:2px solid red; */
   
